--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,5 +1,4 @@
 @import "fonts.css";
-@import "variables";
 
 $header-height: 80px;
 $side-spacing: 30px;
@@ -75,7 +74,6 @@ header {
   outline: none;
   border: none;
   font-size: 20px;
-  margin-bottom: 60px;
 }
 
 %preceded-icon {
@@ -100,42 +98,43 @@ header {
 }
 
 #content {
-  padding: 30px 0;
-  flex-wrap: wrap;
+  //padding: 30px 0;
+  //flex-wrap: wrap;
+  //box-sizing: border-box;
   height: 100%;
-  box-sizing: border-box;
-  display: flex;
-  margin: 0 -#{$card-spacing} -#{$card-spacing} 0;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 #home {
   height: 100%;
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
 }
 
 #home-summary {
   text-align: center;
   font-size: 30px;
   flex-grow: 1;
+  margin: 60px 0;
 }
 
 #skills-title {
   font-size: 30px;
 }
 
-$skill-spacing: 10px;
 
 #home-skills {
-  padding: 10px 0;
-  //height: 100px;
-  //width: 300px
   overflow-y: auto;
-  margin: 0 -#{$skill-spacing} -#{$skill-spacing} 0;
+  padding: 10px;
 }
 
 .skill {
   $skill-height: 40px;
+  $skill-spacing: 10px;
+
   transition: box-shadow 0.3s ease, opacity 0.3s ease;
   padding: 0 20px;
   margin: 0 $skill-spacing $skill-spacing 0;
@@ -144,7 +143,7 @@ $skill-spacing: 10px;
   border-radius: $skill-height/2;
   background: white;
   height: $skill-height;
-  box-shadow: 0 0 10px rgba(black, 0.05);
+  box-shadow: 0 1px 6px rgba(black, 0.1);
   opacity: 0;
 
   &.active {
@@ -152,6 +151,6 @@ $skill-spacing: 10px;
   }
 
   &:hover {
-    box-shadow: 0 5px 20px rgba(black, 0.1);
+    box-shadow: 0 5px 10px rgba(black, 0.2);
   }
 }
